--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
         margin: 0rem;
         padding: 0rem;
-        background: url('/bg.jpg');
+        background: url('./bg.jpg');
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -210,7 +210,7 @@
     <header class="header">
 
         <div class="left">
-            <img src="/hi.png" alt="">
+            <img src="./hi.png" alt="">
         </div>
         <div class="mid">
             <ul class="navbar">
